--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="#contact" class="text-white hover:text-[#085158] font-medium rounded-md p-2 hover:bg-gray-100 transition-colors">Contact</a>
             </div>
             <!-- Mobile Menu Button -->
-            <button id="mobile-menu-button" class="md:hidden text-gray-600 hover:text-blue-600 focus:outline-none">
+            <button id="mobile-menu-button" class="md:hidden text-white hover:text-[#fedb27] focus:outline-none">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                 </svg>
@@ -128,7 +128,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Expenses-Tracker</h3>
                         <p class="text-gray-600 mb-4">A brief description of Project One, highlighting its purpose and the technologies used. This could be a web application, a design project, etc.</p>
-                        <a href="#" class="text-blue-600 hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
+                        <a href="https://trackit-sand.vercel.app/" class="text-[#085158] hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
                 <!-- Project Card 2 -->
@@ -137,7 +137,7 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">BarzOnly</h3>
                         <p class="text-gray-600 mb-4">A brief description of Project Two, highlighting its purpose and the technologies used. Focus on your contribution and the impact.</p>
-                        <a href="#" class="text-blue-600 hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
+                        <a href="https://barz-only2.vercel.app/" class="text-[#085158] hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
                 <!-- Project Card 3 -->
@@ -146,14 +146,14 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Card-Memory Game</h3>
                         <p class="text-gray-600 mb-4">A brief description of Project Three, highlighting its purpose and the technologies used. Add a link to the live demo or GitHub repo.</p>
-                        <a href="#" class="text-blue-600 hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
+                        <a href="https://card-memory-game-lac.vercel.app/" class="text-[#085158]blue-600 hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="container mx-auto px-4 py-16 md:py-24 max-w-6xl">
+        <!-- <section id="contact" class="container mx-auto px-4 py-16 md:py-24 max-w-6xl">
             <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-8 section-title">Contact Me</h2>
             <div class="bg-white p-8 rounded-xl shadow-md">
                 <p class="text-lg leading-relaxed mb-6">
@@ -172,13 +172,26 @@
                         <label for="message" class="block text-sm font-medium text-gray-700 mb-1">Message</label>
                         <textarea id="message" name="message" rows="5" class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm" placeholder="Your message..." required></textarea>
                     </div>
-                    <button type="submit" class="inline-flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors duration-200">
+                    <button type="submit" class="inline-flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-[#085158] hover:bg-[#0E6A72] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors duration-200">
                         Send Message
                     </button>
                 </form>
             </div>
+        </section> -->
+        <section id="contact" class="container mx-auto px-4 py-16 md:py-24 max-w-6xl">
+            <h2 class="text-3xl md:text-4xl font-bold text-gray-800 mb-8 section-title">Contact Me</h2>
+            <div class="bg-white p-8 rounded-xl shadow-md">
+                <p class="text-lg leading-relaxed mb-6">
+                    Interested in collaborating or just want to say hello? Feel free to reach out!
+                </p>
+                <div class="mt-6">
+                    <a href="https://t.me/findy_dev" target="_blank"
+                    class="inline-flex justify-center py-3 px-6 border border-transparent shadow-sm text-base font-medium rounded-md text-white bg-[#085158] hover:bg-[#0E6A72] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors duration-200">
+                        Message Me on Telegram
+                    </a>
+                </div>
+            </div>
         </section>
-
     </main>
 
     <!-- Footer -->
