added images and links

--- a/index.html
+++ b/index.html
@@ -124,28 +124,49 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Project Card 1 -->
                 <div class="card overflow-hidden">
-                    <img src="https://placehold.co/600x400/ADD8E6/000000?text=Project+1" alt="Project 1" class="w-full h-48 object-cover">
+                    <img src="/trackIt.jpg" alt="Project 1" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2">Expenses-Tracker</h3>
-                        <p class="text-gray-600 mb-4">A brief description of Project One, highlighting its purpose and the technologies used. This could be a web application, a design project, etc.</p>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-2">trackIt - Expense Tracker</h3>
+                        <p class="text-gray-600 mb-4">A simple yet powerful web app that helps users monitor their income and spending. TrackIt allows you to add, categorize, and visualize your daily expenses with ease. 
+                            Built with clean UI and dynamic state handling using React. Designed to improve financial awareness and discipline. <br>
+                            <span>
+                                  <span class="text-l font-bold">GitHub:</span> 
+                                  <a href="https://github.com/Findy-WID/trackIt" class="text-[#085158] underline">trackIt</a>
+                            </span>
+                        </p>
                         <a href="https://trackit-sand.vercel.app/" class="text-[#085158] hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
+
                 <!-- Project Card 2 -->
                 <div class="card overflow-hidden">
-                    <img src="https://placehold.co/600x400/ADD8E6/000000?text=Project+2" alt="Project 2" class="w-full h-48 object-cover">
+                    <img src="/barzonlyLogo.png" alt="Project 2" class="w-full h-48 object-cover">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold text-gray-800 mb-2">BarzOnly</h3>
-                        <p class="text-gray-600 mb-4">A brief description of Project Two, highlighting its purpose and the technologies used. Focus on your contribution and the impact.</p>
+                        <h3 class="text-xl font-semibold text-gray-800 mb-2">BarzOnly2</h3>
+                        <p class="text-gray-600 mb-4">BarzOnly2, a sleek web music platform tailored for music lovers is an upgraded version of <a href="" class="text-[#085158] underline">BarzOnly1</a>. BarzOnly2 features a curated tracklist, custom audio player, and smooth UI interactions. 
+                            Built with React and connected to a live API, it delivers a fast, responsive, and engaging listening experience. <br>
+                            <span>
+                                  <span class="text-l font-bold">GitHub:</span> 
+                                  <a href="https://github.com/Findy-WID/BarzOnly2" class="text-[#085158] underline">Card-Memory Game</a>
+                            </span>
+                        </p>
                         <a href="https://barz-only2.vercel.app/" class="text-[#085158] hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
+
                 <!-- Project Card 3 -->
                 <div class="card overflow-hidden">
-                    <img src="https://placehold.co/600x400/ADD8E6/000000?text=Project+3" alt="Project 3" class="w-full h-48 object-cover">
+                    <img src="/CMG.jpg" alt="Project 3" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">Card-Memory Game</h3>
-                        <p class="text-gray-600 mb-4">A brief description of Project Three, highlighting its purpose and the technologies used. Add a link to the live demo or GitHub repo.</p>
+                        <p class="text-gray-600 mb-4">A fun and interactive memory-matching card game that tests users’ focus and recall. Built entirely in React with a dynamic board, 
+                            timer, move counter, and restart functionality. 
+                            Great for sharpening concentration while showcasing your logic-building skills. <br>
+                            <span>
+                                  <span class="text-l font-bold">GitHub:</span> 
+                                  <a href="https://github.com/Findy-WID/Card-Memory-Game" class="text-[#085158] underline">Card-Memory Game</a>
+                            </span>
+                        </p>
                         <a href="https://card-memory-game-lac.vercel.app/" class="text-[#085158]blue-600 hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
