--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8 text-center rounded-t-xl mx-4 md:mx-auto max-w-6xl mb-4">
         <div class="container mx-auto px-4">
-            <p>&copy; 2025 Your Name. All rights reserved.</p>
+            <p>&copy; 2025 Orjimazi Favour. All rights reserved.</p>
             <div class="flex justify-center space-x-6 mt-4">
-                <a href="#" class="text-gray-400 hover:text-white transition-colors">LinkedIn</a>
-                <a href="#" class="text-gray-400 hover:text-white transition-colors">GitHub</a>
-                <a href="#" class="text-gray-400 hover:text-white transition-colors">Twitter</a>
+                <a href="https://www.linkedin.com/in/favour-orjimazi/" class="text-gray-400 hover:text-white transition-colors">LinkedIn</a>
+                <a href="https://github.com/Findy-WID" class="text-gray-400 hover:text-white transition-colors">GitHub</a>
+                <a href="https://x.com/findy_dev?t=wppyIXtcD6WhdK5WDk2DPA&s=09" class="text-gray-400 hover:text-white transition-colors">Twitter</a>
             </div>
         </div>
     </footer>
