added favicon and link

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favour Findy</title>
+    <link rel="icon" type="image/jpeg" href="/Me.jpg">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts - Inter -->
@@ -143,7 +144,7 @@
                     <img src="/barzonlyLogo.png" alt="Project 2" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">BarzOnly2</h3>
-                        <p class="text-gray-600 mb-4">BarzOnly2, a sleek web music platform tailored for music lovers is an upgraded version of <a href="" class="text-[#085158] underline">BarzOnly1</a>. BarzOnly2 features a curated tracklist, custom audio player, and smooth UI interactions. 
+                        <p class="text-gray-600 mb-4">BarzOnly2, a sleek web music platform tailored for music lovers is an upgraded version of <a href="https://barzonly.vercel.app/" class="text-[#085158] underline">BarzOnly1</a>. BarzOnly2 features a curated tracklist, custom audio player, and smooth UI interactions. 
                             Built with React and connected to a live API, it delivers a fast, responsive, and engaging listening experience. <br>
                             <span>
                                   <span class="text-l font-bold">GitHub:</span> 
