slight changes to skill cards

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                   <a href="https://github.com/Findy-WID/trackIt" class="text-[#085158] underline">trackIt</a>
                             </span>
                         </p>
-                        <a href="https://trackit-sand.vercel.app/" class="text-[#085158] hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
+                        <a href="https://trackit-sand.vercel.app/" class="text-[#085158] hover:text-green-700 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
 
@@ -144,14 +144,14 @@
                     <img src="/barzonlyLogo.png" alt="Project 2" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold text-gray-800 mb-2">BarzOnly2</h3>
-                        <p class="text-gray-600 mb-4">BarzOnly2, a sleek web music platform tailored for music lovers is an upgraded version of <a href="https://barzonly.vercel.app/" class="text-[#085158] underline">BarzOnly1</a>. BarzOnly2 features a curated tracklist, custom audio player, and smooth UI interactions. 
+                        <p class="text-gray-600 mb-4"><b>BarzOnly2</b>, a sleek web music platform tailored for music lovers is an upgraded version of <a href="https://barzonly.vercel.app/" class="text-[#085158] underline">BarzOnly1</a>. <br><br><b>BarzOnly2</b> features a curated tracklist, custom audio player, and smooth UI interactions. 
                             Built with React and connected to a live API, it delivers a fast, responsive, and engaging listening experience. <br>
                             <span>
                                   <span class="text-l font-bold">GitHub:</span> 
                                   <a href="https://github.com/Findy-WID/BarzOnly2" class="text-[#085158] underline">Card-Memory Game</a>
                             </span>
                         </p>
-                        <a href="https://barz-only2.vercel.app/" class="text-[#085158] hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
+                        <a href="https://barz-only2.vercel.app/" class="text-[#085158] hover:text-green-700 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
 
@@ -168,7 +168,7 @@
                                   <a href="https://github.com/Findy-WID/Card-Memory-Game" class="text-[#085158] underline">Card-Memory Game</a>
                             </span>
                         </p>
-                        <a href="https://card-memory-game-lac.vercel.app/" class="text-[#085158]blue-600 hover:text-blue-800 font-medium transition-colors">View Project &rarr;</a>
+                        <a href="https://card-memory-game-lac.vercel.app/" class="text-[#085158] hover:text-green-700 font-medium transition-colors">View Project &rarr;</a>
                     </div>
                 </div>
             </div>
