corrected a few errors

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="container mx-auto px-4">
                 <img src="/Me.jpg" alt="Profile Picture" class="rounded-full w-36 h-36 mx-auto mb-6 border-4 border-white shadow-lg">
                 <h1 class="text-4xl md:text-6xl font-extrabold mb-4 leading-tight">Hi, I'm Favour Findy</h1>
-                <p class="text-xl md:text-2xl font-light mb-8">A passionate buolder, building amazing things.</p>
+                <p class="text-xl md:text-2xl font-light mb-8">A passionate solution builder.</p>
                 <a href="#portfolio" class="bg-white text-[#085158] hover:bg-gray-100 px-8 py-3 rounded-full text-lg font-semibold shadow-lg transition-all duration-300 ease-in-out transform hover:scale-105">View My Work</a>
             </div>
         </section>
@@ -148,7 +148,7 @@
                             Built with React and connected to a live API, it delivers a fast, responsive, and engaging listening experience. <br>
                             <span>
                                   <span class="text-l font-bold">GitHub:</span> 
-                                  <a href="https://github.com/Findy-WID/BarzOnly2" class="text-[#085158] underline">Card-Memory Game</a>
+                                  <a href="https://github.com/Findy-WID/BarzOnly2" class="text-[#085158] underline">BarzOnly2</a>
                             </span>
                         </p>
                         <a href="https://barz-only2.vercel.app/" class="text-[#085158] hover:text-green-700 font-medium transition-colors">View Project &rarr;</a>
